--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
+html {
+    height: 100%;
+}
+    
+body {
+    max-width: 960px;
+    margin: auto;
+    box-sizing: border-box;
+    padding-left: 60px;
+    padding-right: 60px;
+    
+}
+
 .headerTop {
     display: flex;
+    justify-content: space-between;
+    padding: 10px;
 }
 
 .headerTop img {
@@ -9,6 +24,7 @@
 
 .headerBottom {
     display: flex;
+    padding: 50px;
 }
 
 .headerBottom img {
@@ -18,6 +34,8 @@
 
 .headerTop, .headerBottom, .footer {
     background-color: #1F2937;
+
+       
 }
 
 #heroText {
@@ -50,4 +68,33 @@ button, .blueContainer {
     font-style: italic;
     font-weight: 200;
     color: #1F2937;
+}
+
+.randomInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.randomInfoPart {
+    display: flex;
+    max-width: 800px;
+    gap: 20px;
+}
+
+.imgAndDescriptions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    max-width: 160px;
+}
+
+.imgAndDescriptions img {
+    width: 160px;
+    height: 160px;
+    
+}
+
+.imgText {
+    text-align: center;
 }
